# Azure-Kinect-Sensor-SDK

./: .clang-format  CMakeLists.txt
cmake/: DetermineTargetArch.cmake  ValidateFormat.py
examples/transformation/: CMakeLists.txt
examples/viewer/opengl/: CMakeLists.txt  viewerwindow.cpp
include/k4a/: k4atypes.h
include/k4ainternal/: common.h  global.h  handle.h  matroska_common.h
src/allocator/: CMakeLists.txt
src/calibration/: CMakeLists.txt  calibration.c
src/capturesync/: CMakeLists.txt
src/color/: CMakeLists.txt  mfcamerareader.cpp  uvc_camerareader.cpp
src/depth_mcu/: depthcommands.h
src/dewrapper/: CMakeLists.txt
src/image/: CMakeLists.txt  image.c
src/logging/: CMakeLists.txt  logging.cpp
src/queue/: CMakeLists.txt
src/record/internal/: CMakeLists.txt
src/record/sdk/: CMakeLists.txt
src/tewrapper/: CMakeLists.txt
src/transformation/: mode_specific_calibration.c  transformation.c
src/usbcommand/: CMakeLists.txt
tests/Calibration/: CMakeLists.txt  calibration.cpp
tests/CaptureSync/: CMakeLists.txt  capturesync.cpp
tests/ColorTests/FunctionalTest/: CMakeLists.txt
tests/ColorTests/UnitTest/: CMakeLists.txt
tests/DepthTests/FunctionalTest/: CMakeLists.txt
tests/ExternLibraries/azure_c_shared/: CMakeLists.txt  main.cpp  threading.cpp
tests/IMUTests/FunctionalTest/: CMakeLists.txt
tests/RecordTests/UnitTest/: custom_track_ut.cpp  playback_ut.cpp  record_ut.cpp  test_helpers.cpp
tests/Transformation/: CMakeLists.txt  transformation.cpp
tests/example/: CMakeLists.txt
tests/executables/: CMakeLists.txt  executables_ft.cpp
tests/global/: CMakeLists.txt
tests/latency/: CMakeLists.txt  latency_perf.cpp
tests/multidevice/: CMakeLists.txt
tests/rwlock/: CMakeLists.txt  rwlock.cpp
tests/throughput/: CMakeLists.txt  throughput_perf.cpp
tools/k4arecorder/: cmdparser.h
tools/k4aviewer/: CMakeLists.txt  k4aaudiochanneldatagraph.h  k4acolorimageconverter.cpp  k4adevicedockcontrol.cpp  k4aimugraph.cpp  k4ainfraredimageconverter.h  k4alogdockcontrol.cpp  k4alogdockcontrol.h  k4avideowindow.h  k4aviewerimage.cpp  k4aviewerutil.h  k4awindowmanager.h  linmath.h  perfcounter.h
tools/updater/: main.c
(+9 files in other folders)
